update button order

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>harakekeCalculator.js</h1>
       <h3>hywel</h3>
     </div>
-      <input class="screen" type="text" id="display" value="0" disabled>
+      <input class="screen" type="text" id="display" value="0">
       <div class="keyboard">
         <button class="none"></button>
         <button type="button" class="clear" id="clear" value="CE">CE</button>
